Refer js directly

--- a/src/Shipwreck.BlazorTypeahead.Demo/wwwroot/index.html
+++ b/src/Shipwreck.BlazorTypeahead.Demo/wwwroot/index.html
@@ -11,7 +11,7 @@
     <app>Loading...</app>
     <script src="js/jquery.slim.min.js" defer="defer"></script>
     <script src="js/bootstrap.bundle.min.js" defer="defer"></script>
-    <script src="_content/Shipwreck.BlazorTypeahead/Shipwreck.BlazorTypeahead.js" defer="defer"></script>
+    <script src="js/Shipwreck.BlazorTypeahead.js" defer="defer"></script>
     <script src="_framework/blazor.webassembly.js" defer="defer"></script>
 </body>
 </html>
